# candidate-riscv-lexer-parser

./: Cargo.toml  README.md  clippy.toml  cspell.json  rust-toolchain.toml
chumsky/: Cargo.toml
chumsky/src/: lexer.rs
examples/: entry.S
pest/: Cargo.toml
pest/src/: parser.rs
pest/src/grammar/: riscv.pest
pest/src/grammer/: riscv.pest
