[workspace]
members = ["chumsky", "pest"]

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
# lto = "fat"

# debug = true
# opt-level = 'z'

[profile.bench]
debug = true
# lto = true

# Without this, printing diff consumes more than a minute.

[profile.dev.package.pretty_assertions]
opt-level = 3

[profile.test.package.pretty_assertions]
opt-level = 3
