[package]
name = "pest-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
pest = "2.4.0"
pest_derive = "2.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
rustyline = "10.0.0"
